@@ -15,6 +15,7 @@ EBUILD memcached-1.2.4.ebuild 1596 RMD160 1d25076e093fcc6817a2fee3925cf6bda29e88
 EBUILD memcached-1.2.5.ebuild 1598 RMD160 b4fbcea843dcbc06ffe2ff1bbd802ff368076372 SHA1 999fec1f39ec188a29dc2aa7ee1182df2e5e1297 SHA256 e4ec2d7fe824e5f7c1a80637a28cb5367bdcb450cebf6b42a4f92cd35782915d
 EBUILD memcached-1.2.6.ebuild 1597 RMD160 682d5bf788206be153711a9fe185d900de74bd75 SHA1 6501e06b0d9a85baa760eebde6d5f9ca28c58cf4 SHA256 a6aa4c5961c916759a481e47c4b8a99f3fa2c37c07ef914bf805210569260ca9
 EBUILD memcached-1.3.0.ebuild 1598 RMD160 13cd992695f2e949d719bcf78088c56ac540f4ea SHA1 596eb38b69126418a4eee54f99e000345312f99b SHA256 c46ef4124aade9e7bd81225b2ec7bcbcee39e8fe4792bb803d8b71a1d0804027
+EBUILD memcached-1.3.3-r1.ebuild 1777 RMD160 d240dbbf107886dd53eb6874553543063bc1f9aa SHA1 57e94e576e2eb9c25497f5d58767e916759d3e34 SHA256 ff97a35f7931de23e57bbfb7b6e0c9fcbfa6e476b0a1e6c61401c9eab8b1aca1
 EBUILD memcached-1.3.3.ebuild 1686 RMD160 0618f8c1ede1cd8699211f715d175ea02e344d57 SHA1 f85975ede29e3f1f29826c26bfec5a6bd51f7335 SHA256 68d9322ab5e5b92ae7c19f89c093fccb39f6f872c54c06d8d8aed754da616606
-MISC ChangeLog 14283 RMD160 3b6d6b627742f2ec95ade7fffbdb716c3b213a39 SHA1 7941497b6d56203ea1c4cb42c642fae605af3876 SHA256 ab7933759af79c6717cef5032935e2851478a6ddeb4d27e87f895685cc40c51b
-MISC metadata.xml 841 RMD160 60a5beb49a85e92147066ead33afb1961bb00eec SHA1 11a620a9e2336f2dcee196b60c4d4e8127ca5c1e SHA256 6ecc5efcf267f183adeac1a372a306042849384a67f86d3543397dcaf62ff64e
+MISC ChangeLog 14559 RMD160 a842bff595cafdafe3492c72aad0d81b681c6531 SHA1 dc71477597007395c49b57160ec99f81a133638d SHA256 52bf2c123be32a9a130b07395cf81f07f4d166371a5414487320e62e41a3f77b
+MISC metadata.xml 966 RMD160 9da6a32f068f21da2b93ad45b4bba6147644e20a SHA1 a7080fc08dde81c21554beeb89b201d16efe08c1 SHA256 ce8186d4b0926cdc2ac0dcc49a737359b3f08a13396b5dc2cf05bf4a366b242b
